objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Probability_to_Win__c</fullName>
        <description>Calculates a suggested range for the probability to win based on the opportunity radar scoring</description>
        <formula>CASE( 
        VALUE(LEFT( TEXT(Stakeholder_Mapping__c) , 1)) +
        VALUE(LEFT( TEXT(Uncovering_Customer_Needs__c) , 1)) + 
        VALUE(LEFT( TEXT(Value_Proposition__c) , 1)) +
        VALUE(LEFT( TEXT(Customer_Alignment__c) , 1))   
    , 
    0, &apos;0% - 25%&apos;, 
    1, &apos;0% - 25%&apos;,
    2, &apos;0% - 25%&apos;,
    3, &apos;0% - 25%&apos;,
    4, &apos;0% - 25%&apos;,
    5, &apos;25% - 50%&apos;,
    6, &apos;25% - 50%&apos;,
    7, &apos;25% - 50%&apos;,
    8, &apos;25% - 50%&apos;,
    9, &apos;50% - 75%&apos;,
    10, &apos;50% - 75%&apos;,
    11, &apos;50% - 75%&apos;,
    12, &apos;50% - 75%&apos;,
    13, &apos;75% - 100%&apos;,
    14, &apos;75% - 100%&apos;,
    15, &apos;75% - 100%&apos;,
    16, &apos;75% - 100%&apos;,
    &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Probability to Win</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13-VLT drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Required__c</fullName>
        <formula>IF( 
OR(
AND( OR( RecordType.DeveloperName = &apos;Project_Opportunity&apos;, RecordType.DeveloperName =&apos;CE_Opportunity&apos;), !ISPICKVAL(CE_Phase__c, &apos;Identification&apos;),HasOpportunityLineItem = false, 
OR( Text(CE_Division__c) = &apos;Drives&apos;,Text(CE_Division__c) = &apos;Cooling&apos;)) 
,
AND( OR( RecordType.DeveloperName = &apos;Project_Opportunity&apos;, RecordType.DeveloperName =&apos;CE_Opportunity&apos;), HasOpportunityLineItem = false, 
Text(CE_Division__c) = &apos;Heating&apos;) 
)
, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;warning&quot;)+ &quot; Warning - Please add a Product Group&quot; , IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Requirement met&quot;)+&quot; Requirement met&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cartridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Start_Date__c</fullName>
        <description>Field used by both C&amp;E and PS. For PS the former name was production start date. 
The main purpose is to identify when the first delivery to an Opportunity will take place.</description>
        <inlineHelpText>Add the date of the first delivery of the Opportunity</inlineHelpText>
        <label>Date of first delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductsLastModified__c</fullName>
        <label>ProductsLastModified</label>
        <summarizedField>OpportunityLineItem.LastModifiedDate</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project_Opportunity__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_CM__c</fullName>
        <description>Allows users to enter projected contribution margin to field.</description>
        <label>Projected CM (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_NW_Amount_PS__c</fullName>
        <description>PS: Project Net Wins - Hidden Field.</description>
        <formula>IF(Probability &gt; 0.89, Amount, IF(Probability &lt; 0.11, Amount *-1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Net Win Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Extra_Large_Amount__c</fullName>
        <formula>IF(   Q_Extra_Large__c  =1, Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Extra Large Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Extra_Large__c</fullName>
        <formula>IF( Amount &gt; 3 * $User.Average_Opportunity_Amount__c &amp;&amp; $User.Average_Opportunity_Amount__c &gt; 0 ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Extra Large</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Inactive_Amount__c</fullName>
        <formula>IF( Inactive__c=1, Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Inactive Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Over_Aged_Amount__c</fullName>
        <formula>IF(   Q_Over_Aged__c  =1, Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Over Aged Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Over_Aged__c</fullName>
        <formula>IF( 
    $User.Opportunity_Average_Age_Won__c &gt; 0 
    &amp;&amp; (Opp_Age__c &gt;  $User.Opportunity_Average_Age_Won__c *3),
    1,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Over Aged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Overdue_Amount__c</fullName>
        <formula>IF ( Overdue__c=1,Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Overdue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Size_Change_Amount__c</fullName>
        <formula>IF ( Q_Size_Change__c = 1, Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Size Change Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Size_Change__c</fullName>
        <formula>IF( Amount_Changes__c &gt; 0.3,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Size Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Stalled_in_Stage_Amount__c</fullName>
        <formula>IF(  Q_Stalled_in_Stage__c =1, Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Stalled in Stage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Stalled_in_Stage__c</fullName>
        <formula>IF(ISBLANK( CE_Stage_Change_Date__c ),0,IF((TODAY()-CE_Stage_Change_Date__c)&gt;  $User.Opportunity_Average_Age_Lost__c ,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Stalled in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Status__c</fullName>
        <formula>If(Overdue__c=1,&quot;Overdue&quot;,IF(Inactive__c=1,&quot;Inactive&quot;,IF( Q_Extra_Large__c=1,&quot;Extra Large&quot;,IF( Q_Over_Aged__c=1,&quot;Overaged&quot;,IF(Low_Quality_Opportunity__c=true,&quot;Low Quality&quot;,&quot;OK&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Time_Slippage_Amount__c</fullName>
        <formula>IF( Q_Time_Slippage__c = 1, Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Time Slippage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Time_Slippage__c</fullName>
        <formula>IF(CloseDate_Changes__c &gt; 2,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Time Slippage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Reference__c</fullName>
        <label>Quotation Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotesLastModified__c</fullName>
        <label>QuotesLastModified</label>
        <summarizedField>Quote.LastModifiedDate</summarizedField>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RA_Customer_Grp_Level_1__c</fullName>
        <description>CE Field to display Customer group from sub account on the Opportunity.</description>
        <formula>Sub_Account__r.MDM_RA_CUSTOMER_GRP_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is talking information from the selected sub account</inlineHelpText>
        <label>DCS Customer Grp. (Level 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_Customer_Grp_Level_2__c</fullName>
        <description>CE Field to display Customer group from sub account on the Opportunity.</description>
        <formula>Sub_Account__r.MDM_RA_CUSTOMER_GRP_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is talking information from the selected sub account</inlineHelpText>
        <label>DCS Customer Grp. (Level 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_Selling_Org__c</fullName>
        <description>CE Field to display Customer group from sub account on the Opportunity.</description>
        <formula>Sub_Account__r.MDM_RA_SELLING_ORG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is talking information from the selected sub account</inlineHelpText>
        <label>DCS Selling Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_CC_Application_Required__c</fullName>
        <formula>IF( 
AND( OR(  RecordType.DeveloperName = &apos;Project_Opportunity&apos;, RecordType.DeveloperName =&apos;CE_Opportunity&apos;),    !ISPICKVAL(CE_Phase__c, &apos;Identification&apos;),ISPICKVAL(  Main_Application__c ,&quot;&quot; ), 
OR( Text(CE_Division__c)  = &apos;Cooling&apos;, Text(CE_Division__c)  = &apos;Cooling&apos;))

 , ( IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;warning&quot;, 12, 12) + &quot; Please add an Application(Cooling Segmentation section)&quot;) , 

 IF(

OR( Text(CE_Division__c) = &apos;Heating&apos;,Text(CE_Division__c) = &apos;Drives&apos;)
, ( IMAGE(&quot;/img/icon/hexagon16.png&quot; , &quot;Not mandatory for your Segment&quot;) + &quot;  Not mandatory for your Segment&quot; ),(IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Requirement met&quot;) +&quot; Requirement met&quot; ) ) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DCS Application Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radar__c</fullName>
        <formula>IMAGE(
	&apos;http://chart.apis.google.com/chart?cht=r&amp;chs=200x200&amp;chd=t:100,100,100,100,100%7C&apos; + 
	TEXT(Stakeholder_Mapping_Value__c * 20 )
	+&apos;,&apos;+
	TEXT(Uncovering_Customer_Needs_Value__c * 20)
	+ &apos;,&apos; +
	TEXT(Value_Proposition_Value__c * 20)
	+ &apos;,&apos; +
	TEXT(Customer_Alignment_Value__c * 20)
	+ &apos;,&apos; +
    TEXT(Stakeholder_Mapping_Value__c * 20)
	+&apos;&amp;chxt=x&amp;chxl=0:%7CSM%7CUCN%7CVP%7CCA&amp;chco=00FF00,FF9900&apos;, 
	&apos;Radar&apos;, 
	200, 
	200
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Radar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason Description</label>
        <picklist>
            <controllingField>Reason_Won_Lost__c</controllingField>
            <picklistValues>
                <fullName>Knowledge of Competitor Price Information from 1 person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge of Competitor Price Information confirmed by &gt;1 person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have seen evidence of a competitor&apos;s invoice/quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Our quality percieved as better than Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor quality percieved as better than ours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Older quality issues with our product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Related to previous retrofits of our products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Our superior delivery reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We have product type in our portfolio, but not this specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor has the product type in their portfolio, but not this specification.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product is unique to us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We do not have this product in our portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Our product does not perform to level of competitors product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Our product performs to a better level than competitor product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We have superior leadtimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor superior delivery reliability.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Own perception based on experience/discussions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recent quality issues with our product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor superior leadtimes.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Our product does not physically fit in application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor product does not physically fit in application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component CPA Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing Identified Cost Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best guess based on experience/discussions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Won_Lost__c</fullName>
        <label>Reason Won/Lost</label>
        <picklist>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>CE Reason for closed Opportunities. This is CE specific as it is uncertain if the PS field can be reused.</description>
        <inlineHelpText>Use the Close Opportunity button to close your Opportunity and add a reason.</inlineHelpText>
        <label>Close reason</label>
        <picklist>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped by us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped by third party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>CE used for Project site adress</description>
        <label>Region - for reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_ID__c</fullName>
        <formula>Account.SAP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Sub_Account__c</field>
                <operation>equals</operation>
                <valueField>Sales_Area__c.Sub_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Area__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Leave Sales Org blank for opportunities on a prospect account</inlineHelpText>
        <label>Sales Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sales_Org__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Sales_Org__c.Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Org__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SampleFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SampleFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Segment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Secondary Segment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>CE Segment is used to segment the Opportunity Pipeline</description>
        <inlineHelpText>Choose the relevant segement for your Opportunity</inlineHelpText>
        <label>Opportunity Segment</label>
        <picklist>
            <controllingField>CE_Division__c</controllingField>
            <picklistValues>
                <fullName>DD - Air comp &amp; vac pumps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Automotive &amp; other transport equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Basic Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Cranes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Distributors not assigned to SBA’s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Electric &amp; Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - HVAC exc. Pump OEM’s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - HVAC Pump OEM’s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Lifts and escalators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Machinery not elsewhere included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Machine Tools &amp; Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Marine &amp; Off Shore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Material Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Metal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Mining &amp; Mineral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Other renewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Plastics &amp; Rubber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Pulp &amp; Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Recycle &amp; waste Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - Refining/petrochem</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Conditions__c</fullName>
        <label>Special Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Mapping_Value__c</fullName>
        <formula>IF (ISBLANK(TEXT(Stakeholder_Mapping__c)), 0, VALUE(LEFT( TEXT(Stakeholder_Mapping__c) , 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stakeholder Mapping Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Mapping__c</fullName>
        <description>Do we have overview and strong relationships with key stakeholders?</description>
        <inlineHelpText>To what extend are you managing to involve the right people (influencers and decision-makers) in the customer organization?</inlineHelpText>
        <label>Stakeholder Mapping</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Decision Makers not Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - All Decision Makers and Influencers identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - All decision makers have confirmed that we have access to them</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - All decision makers have conducted meetings with us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - All decision makers confirm to us that Danfoss is qualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>CE used for Project site adress</description>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a Sub Account (SAP customer)</description>
        <label>Sub Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sub_Account__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sub_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Opportunity_Amount__c</fullName>
        <label>Sub Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <description>C&amp;E Sub segment - Mainly used for RC and CC for segmentation purpose</description>
        <inlineHelpText>Choose the relevant sub segment - Only relevant for RC and CC - otherwise select &quot;Not available&quot;</inlineHelpText>
        <label>Sub Segment</label>
        <picklist>
            <picklistValues>
                <fullName>RC CC Sub Segment 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC CC Sub Segment 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available -PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not available -HS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_reason__c</fullName>
        <description>CE sub reason for closed Opportunities. This is CE specific as it is uncertain if the PS field &quot;Detailed reason&quot; can be reused.
Linked with Reason</description>
        <inlineHelpText>Use the Close Opportunity button to close your Opportunity and add a sub reason.
Please note that the sub reason is not available for all reasons.</inlineHelpText>
        <label>Close sub reason</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor has strong value proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor has superior Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor is preferred supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor offers full System/Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer has long relationship with Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danfoss does not have the needed product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divisional specific feature we are currently missing in portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Our product does not physically fit in application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USD_Amount__c</fullName>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uncovering_Customer_Needs_Value__c</fullName>
        <formula>IF (ISBLANK(TEXT( Uncovering_Customer_Needs__c )), 0, VALUE(LEFT( TEXT( Uncovering_Customer_Needs__c ) , 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncovering Customer Needs Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uncovering_Customer_Needs__c</fullName>
        <description>Do we have a solid understanding of the problem or issues that they are trying to fix?</description>
        <inlineHelpText>To what extent are you able to address the pains and needs of the key stakeholders in the customer organization?</inlineHelpText>
        <label>Uncovering Customer Needs</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Pain or need of decision makers not identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Pain or need of decision makers identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Decision makers, with their individual needs, confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Decision makers agree that proposed offering is of significant value to them and that it is differentiated from competitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Decision makers commit to us to resolve their pain &amp; needs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>